# weibo-auto-signin

./: .gitignore  README.md  accounts.example.json  cookies.example.txt  pyproject.toml
.github/workflows/: checkin.yml  ci.yml
docs/: README.en.md
docs/superpowers/plans/: 2026-04-07-notification-module.md  2026-04-07-weibo-auto-signin-mvp.md
docs/superpowers/specs/: 2026-04-07-notification-module-design.md  2026-04-07-weibo-auto-signin-mvp-design.md
src/weibo_auto_signin/: __init__.py  browser_login.py  checkin.py  cli.py  client.py  config.py  cookie.py  cookie_store.py  logging.py  models.py  notify.py
src/weibo_auto_signin/notifiers/: __init__.py  email.py  pushplus.py
tests/: test_browser_login.py  test_checkin.py  test_cli.py  test_client.py  test_config.py  test_cookie.py  test_cookie_store.py  test_notifier_email.py  test_notifier_pushplus.py  test_notify.py  test_smoke.py
